--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,2 +1,2 @@
-fichier.txt = C:/Users/Jonathan/Documents/DIGINAMIC/COURS/SPRING/restaurant.txt
-spring.profiles.active = PlatMemoire, Service1
+fichier.stockage = C:/Users/Jonathan/Documents/DIGINAMIC/COURS/SPRING/restaurant.txt
+spring.profiles.active = PlatFichier, Service1
