--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,2 +1,7 @@
 fichier.stockage = C:/Users/Jonathan/Documents/DIGINAMIC/COURS/SPRING/restaurant.txt
 spring.profiles.active = PlatFichier, Service1
+# TODO mettre à jour les informations d'accès à votre base de données
+bdd.driver=com.mariadb.cj.jdbc.Driver
+bdd.url=jdbc:mariadb://localhost:3306/restaurant-bdd?useSSL=false
+bdd.user=root
+bdd.pass=
