--- a/pom.xml
+++ b/pom.xml
@@ -61,10 +61,10 @@
 		</dependency>
 		<!-- exemple de connecteur jdbc -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+<groupId>org.mariadb.jdbc</groupId>
+<artifactId>mariadb-java-client</artifactId>
+<version>2.4.0</version>
+</dependency>
 	</dependencies>
 	<build>
 		<plugins>
