--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,5 +1,5 @@
 fichier.stockage = C:/Users/Jonathan/Documents/DIGINAMIC/COURS/SPRING/restaurant.txt
-spring.profiles.active = PlatJdbc, Service1
+spring.profiles.active = jpa, Service1
 
 bdd.driver=org.mariadb.jdbc.Driver
 bdd.url=jdbc:mariadb://localhost:3306/restaurant-bdd?useSSL=false
