--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,10 @@
 			<artifactId>hibernate-core</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
